--- a/css/style.css
+++ b/css/style.css
@@ -1019,7 +1019,8 @@ body {
     }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 520px) {
+
     .container {
         margin-right: 15px;
         margin-left: 15px;
@@ -1027,24 +1028,180 @@ body {
 
     .button {
         font-size: 12px;
-        padding: 11px 14px 14px 14px;
+        padding: 10px 41px;
     }
 
     .section-heading {
         font-size: 24px;
     }
 
+
+    .how-we-work__slide-right {
+        aspect-ratio: 290 / 160;
+        min-width: unset;
+        
+        margin-bottom: 5px;
+    }
+
+    
+    .about {
+        margin-bottom: 130px;
+    }
+    .about__heading {
+        margin-bottom: 22px;
+    }
+
+    .about__card-block-left-content {
+        display: none;
+    }
+
+    .about__card-block-left-text {
+        max-width: unset;
+        margin-bottom: 13px;
+
+        font-family: Montserrat;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 28px;
+    }
+
+    .about__card-block-left-content-outer {
+        display: block;
+    }
+
+    .card1 {
+        padding: 84px 0 0 0;
+        background-size: 69px auto;
+        background-position: 0 16px;
+        border: 0;
+    }
+
+    .card1:first-child {
+        margin-bottom: 46px;
+    }
+
+    .card1__heading {
+        margin-bottom: 2px;
+    }
+
+    .about__content {
+        margin-bottom: 13px;
+    }
+    
+    .about__card-block {
+        gap: 7px;
+    }
+
+    .about__card-block-left {
+        aspect-ratio: 924 / 640;
+    }
+
+    .about__card-block-left__button {
+        color: #FF9900;
+    }
+
+    .about__card-block-left__button:focus {
+        color: #FFF;
+    }
+
+
+    .footer__container {
+        padding: 30px 0;
+    }
+
+    .footer__heading {
+        margin-bottom: 23px;
+    }
+
+    .footer__center {
+        width: unset;
+        border-bottom: 1px solid #595959;
+        flex-basis: 495px;
+    }
+
+    .footer-form {
+        justify-content: center;
+    }
+
+    .footer__left {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer__socials {
+        position: inherit;
+    }
+
+    .footer__social-link {
+        width: auto;
+        height: auto;
+        margin-right: 2px;
+    }
+
+    .footer__social-link:not(:last-child) {
+        margin-right: 1px;
+    }
+
+    .footer-form__textarea {
+        margin-bottom: 24px;
+    }
+
+    .footer-form__submit {
+        padding: 14px 28px;
+        margin-bottom: 12px;
+    }
+
+    .custom-footer-checkbox__label {
+        font-size: 16px;
+    }
+
+    .footer__logo {
+        width: 131px;
+        height: 42px;
+
+        margin-top: 18px;
+        margin-bottom: 3px;
+        background-size: contain;
+    }
+
+    .footer__social-icon {
+        width: 40px;
+        height: 40px;
+    }
+}
+
+
+@media (max-width: 320px) {
+
+
     .section-content-font {
         font-size: 14px;
+        line-height: 2;
     }
 
     .subheading {
         font-size: 18px;
         font-weight: 500;
+        line-height: 1.35;
+    }
+
+    .header__container {
+        padding-top: 4px;
+    }
+
+    .header__logo {
+        width: 110px;
+        height: 35px;
+    }
+
+    .hero {
+        margin-bottom: 63px;
     }
 
     .hero__container {
         padding: 60px 22px;
+
         min-height: unset;
         text-align: center;
     }
@@ -1061,69 +1218,69 @@ body {
     }
     
     .hero__button {
-        padding: 6px 22px;
+        padding: 6px 29px;
     }
 
-    .about__card-block-left-content {
-        display: none;
+    
+    .how-we-work__heading {
+        margin-bottom: 21px;
     }
 
-    .about__card-block-left-text {
-        max-width: unset;
-        font-family: Montserrat;
+    .how-we-work__slide {
+        gap: 16px;
+    }
+
+    .how-we-work__button:not(:last-child) {
+        margin-right: 10px;
+    }
+
+    .how-we-work__buttons .button:nth-child(2) {
+        padding: 9px 32px;
+    }
+
+    .work-steps {
+        margin-bottom: 12px;
+    }
+
+    .work-steps__step {
         font-size: 14px;
-        font-weight: 400;
-        line-height: 28px;
     }
 
-    .about__card-block-left-content-outer {
-        display: block;
+    .how-we-work {
+        margin-bottom: 69px;
     }
 
-    .card1 {
-        padding: 51px 0 0 0;
-        background-size: 64px 49px;
-        background-position: left top;
-        border: 0;
+    .how-we-work__slide-left {
+        padding-bottom: 50px;
     }
 
-    .about__card-block-left__button {
-        color: #FF9900;
+    .faq {
+        margin-bottom: 27px;
     }
 
-    .about__card-block-left__button:focus {
-        color: #FFF;
+    .faq__heading {
+        margin-bottom: 20px;
     }
 
-    .how-we-work__slide-right {
-        min-width: unset;
+    .faq__item {
+        padding: 33px 0;
+    }
+
+    .faq__item:last-child {
+        padding-bottom: 0px;
     }
 
     .faq__item-subheading {
+        max-width: 80%;
+
         font-size: 14px;
         padding-right: 0;
+        line-height: 1.55;
     }
 
     .faq__spoiler-button {
+        flex: 0 0 30px;
         width: 30px;
         height: 30px;
-    }
-
-    .footer__center {
-        width: unset;
-    }
-
-    .footer-form {
-        justify-content: center;
-    }
-
-    .footer__left {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .footer__socials {
-        position: inherit;
     }
 }
