--- a/css/style.css
+++ b/css/style.css
@@ -867,7 +867,7 @@ body {
         width: 420px;
         height: 768px;
         
-        display: none;
+        display: flex;
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
@@ -875,15 +875,18 @@ body {
         margin-top: 0;
         padding: 39px 50px 0 50px;
         z-index: 3;
-        left: 0px;
+        left: -420px;
         top: 0px;
+
+        transition: left 1s ease;
         
         background-color: #FFF;
         box-shadow: 0px 5px 40px rgba(0, 0, 0, 0.1);
     }
 
     .top-nav__list--active {
-        display: flex;
+        /* display: flex; */
+        left: 0;
     }
 
     .top-nav__close-btn {
