--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,7 @@ body {
 
 .top-nav__close-btn {
     display: none;
+    margin-left: 7px;
     width: 23px;
     height: 23px;
 
@@ -870,6 +871,7 @@ body {
     .top-nav__list {
         position: absolute;
         width: 420px;
+        max-width: 100%;
         height: 768px;
         
         display: flex;
@@ -883,15 +885,14 @@ body {
         left: -420px;
         top: 0px;
 
-        transition: left 1s ease;
+        transition: left .4s ease;
         
         background-color: #FFF;
         box-shadow: 0px 5px 40px rgba(0, 0, 0, 0.1);
     }
 
     .top-nav__list--active {
-        /* display: flex; */
-        left: 0;
+        left: 0 !important;
     }
 
     .top-nav__close-btn {
@@ -1174,6 +1175,22 @@ body {
 }
 
 @media (max-width: 520px) {
+
+    .top-nav__list {
+        width: 100%;
+        left: -100%;
+
+        padding: 32px 13px 0px 13px;
+    }
+
+    .top-nav__link {
+        font-size: 16px;
+        font-weight: 700;
+    }
+
+    .top-nav__item:not(:last-child) {
+        margin-bottom: 32px;
+    }
 
     .container {
         margin-right: 15px;
