--- a/css/style.css
+++ b/css/style.css
@@ -1042,8 +1042,6 @@ body {
         height: 235px;
     }
 
-
-
     .footer__container {
         flex-direction: column-reverse;
     }
@@ -1170,8 +1168,40 @@ body {
 
 @media (max-width: 520px) {
 
-    .how-we-work__buttons {
-        gap: 10px;
+    /* common classes */
+    .container {
+        margin-right: 15px;
+        margin-left: 15px;
+    }
+
+    .button {
+        font-size: 12px;
+        padding: 10px 41px;
+    }
+
+    .section-heading {
+        font-size: 24px;
+    }
+
+    .section-content-font {
+        font-size: 14px;
+        line-height: 2;
+    }
+
+    .subheading {
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 1.35;
+    }
+
+    /* header */
+    .header__container {
+        padding-top: 4px;
+    }
+
+    .header__logo {
+        width: 110px;
+        height: 35px;
     }
 
     .top-nav__list {
@@ -1190,20 +1220,45 @@ body {
         margin-bottom: 32px;
     }
 
-    .container {
-        margin-right: 15px;
-        margin-left: 15px;
+    /* hero */
+    .hero {
+        margin-bottom: 63px;
     }
 
-    .button {
+    .hero__container {
+        padding: 60px 22px;
+
+        min-height: unset;
+        text-align: center;
+    }
+
+    .hero__heading {
+        font-size: 20px;
+        line-height: 1.2;
+    }
+
+    .hero__content {
         font-size: 12px;
-        padding: 10px 41px;
+        line-height: 1.2;
+        margin-bottom: 32px;
+    }
+    
+    .hero__button {
+        padding: 6px 29px;
     }
 
-    .section-heading {
-        font-size: 24px;
+    /* how-we-work */
+    .how-we-work__heading {
+        margin-bottom: 21px;
     }
 
+    .how-we-work__slide {
+        gap: 16px;
+    }
+
+    .how-we-work__buttons {
+        gap: 10px;
+    }
 
     .how-we-work__slide-right {
         aspect-ratio: 290 / 160;
@@ -1212,6 +1267,54 @@ body {
         margin-bottom: 5px;
     }
 
+    .how-we-work__buttons .button:nth-child(2) {
+        padding: 9px 32px;
+    }
+
+    .work-steps {
+        margin-bottom: 12px;
+    }
+
+    .work-steps__step {
+        font-size: 14px;
+    }
+
+    .how-we-work {
+        margin-bottom: 69px;
+    }
+
+    /* faq */
+    .faq {
+        margin-bottom: 27px;
+    }
+
+    .faq__heading {
+        margin-bottom: 20px;
+    }
+
+    .faq__item {
+        padding: 33px 0;
+    }
+
+    .faq__item:last-child {
+        padding-bottom: 0px;
+    }
+
+    .faq__item-subheading {
+        max-width: 80%;
+
+        font-size: 14px;
+        padding-right: 0;
+        line-height: 1.55;
+    }
+
+    .faq__spoiler-button {
+        flex: 0 0 30px;
+        width: 30px;
+        height: 30px;
+    }
+
+    /* footer */
     .footer__container {
         padding: 30px 0;
     }
@@ -1275,108 +1378,6 @@ body {
     .footer__social-icon {
         width: 40px;
         height: 40px;
-    }
-
-
-    .section-content-font {
-        font-size: 14px;
-        line-height: 2;
-    }
-
-    .subheading {
-        font-size: 18px;
-        font-weight: 500;
-        line-height: 1.35;
-    }
-
-    .header__container {
-        padding-top: 4px;
-    }
-
-    .header__logo {
-        width: 110px;
-        height: 35px;
-    }
-
-    .hero {
-        margin-bottom: 63px;
-    }
-
-    .hero__container {
-        padding: 60px 22px;
-
-        min-height: unset;
-        text-align: center;
-    }
-
-    .hero__heading {
-        font-size: 20px;
-        line-height: 1.2;
-    }
-
-    .hero__content {
-        font-size: 12px;
-        line-height: 1.2;
-        margin-bottom: 32px;
-    }
-    
-    .hero__button {
-        padding: 6px 29px;
-    }
-
-    
-    .how-we-work__heading {
-        margin-bottom: 21px;
-    }
-
-    .how-we-work__slide {
-        gap: 16px;
-    }
-
-    .how-we-work__buttons .button:nth-child(2) {
-        padding: 9px 32px;
-    }
-
-    .work-steps {
-        margin-bottom: 12px;
-    }
-
-    .work-steps__step {
-        font-size: 14px;
-    }
-
-    .how-we-work {
-        margin-bottom: 69px;
-    }
-
-    .faq {
-        margin-bottom: 27px;
-    }
-
-    .faq__heading {
-        margin-bottom: 20px;
-    }
-
-    .faq__item {
-        padding: 33px 0;
-    }
-
-    .faq__item:last-child {
-        padding-bottom: 0px;
-    }
-
-    .faq__item-subheading {
-        max-width: 80%;
-
-        font-size: 14px;
-        padding-right: 0;
-        line-height: 1.55;
-    }
-
-    .faq__spoiler-button {
-        flex: 0 0 30px;
-        width: 30px;
-        height: 30px;
     }
 }
 
