--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,8 @@
     color: #CACACA;
 }
 
-button:focus-visible, *:focus {
+button:focus-visible,
+*:focus {
     outline: 2px solid var(--color-orange);
 }
 
@@ -366,7 +367,7 @@ body {
 
     max-width: 850px;
     margin: 0px 0px 90px 0px;
-    
+
     color: #FFF;
     font-family: Montserrat;
     font-size: 24px;
@@ -861,7 +862,7 @@ body {
 }
 
 @media (max-width: 1340px) {
-    
+
     /* burger */
     .top-nav__item:not(:last-child) {
         margin-bottom: 60px;
@@ -876,7 +877,7 @@ body {
         width: 420px;
         max-width: 100%;
         height: 768px;
-        
+
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
@@ -889,7 +890,7 @@ body {
         top: 0px;
 
         transition: left .4s ease;
-        
+
         background-color: #FFF;
         box-shadow: 0px 5px 40px rgba(0, 0, 0, 0.1);
     }
@@ -943,7 +944,7 @@ body {
 }
 
 @media (max-width: 1024px) {
-    
+
     .header__container {
         padding-top: 5px;
     }
@@ -1094,8 +1095,8 @@ body {
 
     .header__container {
         padding-top: 0px;
-    }   
-    
+    }
+
     .faq__item-subheading {
         padding-right: 7%;
     }
@@ -1113,6 +1114,7 @@ body {
     .about {
         margin-bottom: 130px;
     }
+
     .about__heading {
         margin-bottom: 22px;
     }
@@ -1153,7 +1155,7 @@ body {
     .about__content {
         margin-bottom: 13px;
     }
-    
+
     .about__card-block {
         gap: 7px;
     }
@@ -1247,7 +1249,7 @@ body {
         line-height: 1.2;
         margin-bottom: 32px;
     }
-    
+
     .hero__button {
         padding: 6px 29px;
     }
@@ -1268,7 +1270,7 @@ body {
     .how-we-work__slide-right {
         aspect-ratio: 290 / 160;
         min-width: unset;
-        
+
         margin-bottom: 5px;
     }
 
